<resources>
    <string name="app_name">inapp-voice-android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vonage">Vonage</string>
    <string name="signin">Sign-In</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="region">Region</string>
    <string name="pin">Pin</string>
    <string name="call_a_user">Call a user</string>
    <string name="call">Call</string>
    <string name="call_icon">Call icon</string>
    <string name="hangup">Hangup</string>
    <string name="answer">Answer</string>
    <string name="reject">Reject</string>
    <string name="data">DATA</string>
    <string name="copy">Copy</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="choose_a_region">Choose a region</string>
    <string name="enter_pin">Enter pin</string>
    <string name="answered">Answered</string>
</resources>