<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clLogin"
    tools:context=".views.LoginActivity">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vonage"
        android:height="72dp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/gray"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/clSignInForm"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSignInForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="42dp"
        android:paddingRight="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
        >
        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="48dp"
            android:text="@string/signin"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvUsername"
            />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etUsername"
            />
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_background"
            android:layout_marginTop="4dp"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvRegion"
            android:inputType="text"
            android:hint="@string/enter_your_name"
            android:autofillHints="name"
            />
        <TextView
            android:id="@+id/tvRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etRegion"
            />
<!--        <androidx.appcompat.widget.SearchView-->
<!--            android:id="@+id/svRegion"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            app:iconifiedByDefault="false"-->
<!--            app:searchIcon="@null"-->
<!--            app:queryBackground="@drawable/rounded_background"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tvRegion"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/rvRegion"-->
<!--            app:queryHint="@string/choose_a_region"-->
<!--            />-->
        <EditText
            android:id="@+id/etRegion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegion"
            app:layout_constraintBottom_toTopOf="@+id/rvRegion"
            android:hint="@string/choose_a_region"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRegion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegion"
            app:layout_constraintBottom_toTopOf="@+id/tvPin"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tvPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rvRegion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etPin"
            />
        <EditText
            android:id="@+id/etPin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_background"
            android:layout_marginTop="4dp"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            app:layout_constraintTop_toBottomOf="@+id/tvPin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btLogin"
            android:hint="@string/enter_pin"
            android:inputType="numberPassword"
            />
        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_marginTop="48dp"
            android:textAllCaps="false"
            android:backgroundTint="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPin"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/pbLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        >
    </ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>