<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clCallStatus"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="42dp"
    android:paddingRight="42dp"
    >
    <TextView
        android:id="@+id/tvLoggedUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="User 1 (Singapore)"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvCallUser"
        />
    <TextView
        android:id="@+id/tvCallUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_a_user"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/tvLoggedUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/svCallUser"
        />
    <androidx.appcompat.widget.SearchView
        android:id="@+id/svCallUser"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:iconifiedByDefault="false"
        app:searchIcon="@null"
        app:queryBackground="@drawable/rounded_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCallUser"
        app:layout_constraintBottom_toTopOf="@+id/rvCallUser"
        app:queryHint="@string/username"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCallUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svCallUser"
        app:layout_constraintBottom_toTopOf="@+id/btCallAUser"
        />
    <Button
        android:id="@+id/btCallAUser"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/call"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="48dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvCallUser"
        />
</androidx.constraintlayout.widget.ConstraintLayout>