<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vonage"
            android:height="72dp"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@color/gray"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fcCallStatus"
            />
        <Button
            android:id="@+id/btLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/logout"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@+id/tvLoginTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tvLoginTitle" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcCallStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
            app:layout_constraintBottom_toTopOf="@+id/clCallData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout="@layout/fragment_idlecall"
            >
        </androidx.fragment.app.FragmentContainerView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCallData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fcCallStatus"
            android:background="@drawable/layout_border"
            android:padding="8dp"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginTop="42dp"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/tvCallData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvMyLegIdTitle"
                >
            </TextView>
            <TextView
                android:id="@+id/tvMyLegIdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="LegId - Me"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvCallData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvMyLegIdData"
                >
            </TextView>
            <TextView
                android:id="@+id/tvMyLegIdData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="xxxxxxxxxxxxx"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvMyLegIdTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/rounded_background"
                app:layout_constraintBottom_toTopOf="@+id/tvMemberLegIdTitle"
                >
            </TextView>
            <TextView
                android:id="@+id/tvMemberLegIdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="LegId - User5"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvMyLegIdData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvMemberLegIdData"
                >
            </TextView>

            <TextView
                android:id="@+id/tvMemberLegIdData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_background"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvCallDataRegion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMemberLegIdTitle"
                tools:text="xxxxxxxxxxxxx"/>
            <TextView
                android:id="@+id/tvCallDataRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvMemberLegIdData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvCallDataRegionData"
                >
            </TextView>
            <TextView
                android:id="@+id/tvCallDataRegionData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Singapore"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_marginBottom="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvCallDataRegion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/rounded_background"
                app:layout_constraintBottom_toTopOf="@+id/btCopyData"
                >
            </TextView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCopyData"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/copy"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:background="@drawable/transparent_bg_bordered_button"
                app:layout_constraintTop_toBottomOf="@+id/tvCallDataRegionData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
            </androidx.appcompat.widget.AppCompatButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>